<resources>
    <string name="app_name">VC_ERP_Prac</string>

    <string name="alert">Alert</string>
    <string name="some_wrong">Something wrong!</string>
    <string name="my_contacts">My Contact</string>
    <string name="add_contact">Add Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_email">Please enter_email</string>
    <string name="please_enter_valid_email_address">Please_enter_valid_email</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="please_enter_mobile">Please Enter Mobile</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_state">Select state</string>
    <string name="select_dist">Select District</string>
    <string name="select_city">Select City</string>
    <string name="are_you_sure_you_want_to_delete_this_contact">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mobile_exits">Mobile number already exits</string>
</resources>