<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.GeneralFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/c_a7a7a7"
        android:textSize="@dimen/_12ssp"
        app:hintTextColor="@color/c_a7a7a7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:maxLength="30"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_a7a7a7"
            android:textSize="@dimen/_13ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:textColorHint="@color/c_a7a7a7"
        android:textSize="@dimen/_12ssp"
        app:hintTextColor="@color/c_a7a7a7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:maxLength="30"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_a7a7a7"
            android:textSize="@dimen/_13ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:textColorHint="@color/c_a7a7a7"
        android:textSize="@dimen/_12ssp"
        app:hintTextColor="@color/c_a7a7a7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:maxLength="12"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_a7a7a7"
            android:textSize="@dimen/_13ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:textColorHint="@color/c_a7a7a7"
        android:textSize="@dimen/_12ssp"
        app:hintTextColor="@color/c_a7a7a7"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/c_000000"
            android:textColorHint="@color/c_a7a7a7"
            android:textSize="@dimen/_13ssp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
</layout>