<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_96a4ba"
    tools:context=".AddContactActivity">
    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/c_0083ff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/arrow_back_24"
            android:tint="@color/white" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_toolbar"
        android:textSize="@dimen/_10sdp"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/c_0083ff"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        android:background="@color/white"
        app:tabSelectedTextColor="@color/c_0083ff"
        app:tabTextColor="@color/c_0083ff" />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        android:layout_above="@+id/ll_bottom"/>
    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/c_0083ff"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/c_adaeb3"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
</layout>